Update the user API to use the JWT
