# app.py
@@ -4,14 +4,15 @@ from flask_restful import Api
 
 from conf.config import HTTP_HOST, HTTP_PORT
 from service.healthz import Healthz
-from service.user import User, CreateUser, Me
+from service.user import CreateUser, Me, UpdateUser, GetUser
 
 app = Flask(__name__)
 api = Api(app)
 
 api.add_resource(Healthz, '/healthz')
 api.add_resource(CreateUser, '/user')
-api.add_resource(User, '/user/<user_id>')
+api.add_resource(GetUser, '/user/<user_id>')
+api.add_resource(UpdateUser, '/user')
 api.add_resource(Me, '/me')
 
 if __name__ == '__main__':
