# service/user.py
@@ -10,17 +10,30 @@ from conf.config import CASSANDRA_HOSTS, USER_KEYSPACE
 from model.user import UserInfoById, UserInfoByUsername
 
 
-class User(Resource):
+def get_user_id_from_jwt():
+    userinfo_encoded = request.headers.get("X-Endpoint-Api-Userinfo")
+    userinfo = json.loads(base64.b64decode(userinfo_encoded))
+    return userinfo.get("id")
+
+
+class GetUser(Resource):
     def get(self, user_id):
         connection.setup(hosts=CASSANDRA_HOSTS, default_keyspace=USER_KEYSPACE)
-        user = UserInfoById.get(user_id=user_id).to_object()
+        user = UserInfoById.filter(user_id=user_id)
         if not user:
             return make_response("User not found", 404)
 
-        return user
+        return user.get().to_object()
 
-    def put(self, user_id):
+
+class UpdateUser(Resource):
+    def put(self):
+        user_id = get_user_id_from_jwt()
+        if not user_id:
+            return make_response("You must send the userInfo into the header X-Endpoint-Api-Userinfo", 500)
+
         user = request.get_json(silent=True)
+
         if not user:
             return make_response("Must send user information", 500)
 
@@ -48,11 +61,13 @@ class User(Resource):
 
 class CreateUser(Resource):
     def post(self):
+        user_id = get_user_id_from_jwt()
+        if not user_id:
+            return make_response("You must send the userInfo into the header X-Endpoint-Api-Userinfo", 500)
+
         user = request.get_json(silent=True)
         if not user:
             return make_response("Must send user information", 500)
-
-        user_id = user.get("user_id")
 
         connection.setup(hosts=CASSANDRA_HOSTS, default_keyspace=USER_KEYSPACE)
         UserInfoById.create(
@@ -71,14 +86,12 @@ class CreateUser(Resource):
 
 class Me(Resource):
     def get(self):
-        user_id = self.get_user_id_from_jwt()
+        user_id = get_user_id_from_jwt()
+        if not user_id:
+            return make_response("You must send the userInfo into the header X-Endpoint-Api-Userinfo", 500)
+
         connection.setup(hosts=CASSANDRA_HOSTS, default_keyspace=USER_KEYSPACE)
         user = UserInfoById.get(user_id=user_id).to_object()
         if not user:
             return make_response("User not found", 404)
         return user
-
-    def get_user_id_from_jwt(self):
-        userinfo_encoded = request.headers.get("X-Endpoint-Api-Userinfo")
-        userinfo = json.loads(base64.b64decode(userinfo_encoded))
-        return userinfo.get("id")
